--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@
               {%- endif %}
 
               <!-- Other pages -->
-              {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
+              <!-- {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
               {%- for p in sorted_pages -%}
               {%- if p.nav and p.autogen == nil -%}
               {%- if p.dropdown %}
@@ -82,7 +82,7 @@
               {%- endif -%}
               {%- endif -%}
               {% endfor -%}
-              {%- if site.enable_darkmode %}
+              {%- if site.enable_darkmode %} -->
 
               <!-- Toogle theme mode -->
               <li class="toggle-container">
