--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,3 +29,6 @@
     <script src="{{ '/assets/js/theme.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/dark_mode.js' | relative_url }}"></script>
     {% endif %}
+    
+    <!-- jekyll-seo-tags plugin  --->
+    {% seo %}
