--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,36 +1,30 @@
 <!-- _includes/projects.html -->
-<div class="grid-sizer"></div>
-<div class="grid-item">
+<div class="project-item">
   {% if project.redirect -%}
-  <a href="{{ project.redirect }}">
-    {%- else -%}
-    <a href="{{ project.url | relative_url }}">
-      {%- endif %}
-      <div class="card hoverable">
-        {%- if project.img %}
-        {%- include figure.html
-          path=project.img
-          alt="project thumbnail" -%}
-        {%- endif %}
-        <div class="card-body">
-          <h2 class="card-title">{{ project.title }}</h2>
-          <p class="card-text">{{ project.description }}</p>
-          <div class="row ml-1 mr-1 p-0">
-            {%- if project.github -%}
-            <div class="github-icon">
-              <div class="icon" data-toggle="tooltip" title="Code Repository">
-                <a href="{{ project.github }}"><i class="fab fa-github gh-icon"></i></a>
-              </div>
-              {%- if project.github_stars -%}
-              <span class="stars" data-toggle="tooltip" title="GitHub Stars">
-                <i class="fas fa-star"></i>
-                <span id="{{ project.github_stars }}-stars"></span>
-              </span>
-              {%- endif %}
-            </div>
-            {%- endif %}
-          </div>
-        </div>
-      </div>
-    </a>
+  <a href="{{ project.redirect }}" target="_blank" rel="noopener noreferrer" class="project-link">
+  {%- else -%}
+  <a href="{{ project.url | relative_url }}" class="project-link">
+  {%- endif %}
+    
+    <div class="project-header">
+      <h3 class="project-title">{{ project.title }}</h3>
+      {% if project.status %}
+      <span class="project-status status-{{ project.status | downcase }}">{{ project.status }}</span>
+      {% endif %}
+      <p class="project-description">{{ project.description }}</p>
+    </div>
+    
+    {% if project.technologies %}
+    <div class="project-tech">
+      {% for tech in project.technologies %}
+      <span class="tech">{{ tech }}</span>
+      {% endfor %}
+    </div>
+    {% endif %}
+    
+    {% if project.date %}
+    <div class="project-date">{{ project.date | date: "%B %Y" }}</div>
+    {% endif %}
+    
+  </a>
 </div>
